# mark_traking

./: .gitignore  CMakeLists.txt  HogSvmClassifier.cpp  HogSvmClassifier.h  README.md  TS_define.h  TrafficSign.cpp  TrafficSingDetector.cpp  TrafficSingDetector.h  main.cpp.temp  stdafx.h  triangle.xml  warnTriangle.xml  warningTriangleDetect.cpp
